# Koemotion

./: .gitignore  README.md  pyproject.toml
docs/: subscription.md
examples/facemotion/: README.md  sample.json
examples/streaming/: README.md  realtime_chat_demo.py  streaming_demo.py
examples_javascript/streaming/: README.md  main.js  package-lock.json  package.json
examples_javascript/streaming/public/: index.html  script.js
koemotion/: __init__.py  cli.py  client.py  facemotion.py  response.py  streaming.py
tests/: test_client.py
tools/facemotion/: README.md  requirements.txt  utils.py  visualize.py
